manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextgenz-deploy
  name: nextgenz-deploy
  namespace: nextgenz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextgenz-deploy
  template:
    metadata:
      labels:
        app: nextgenz-deploy
    spec:
      containers:
      - image: 943812324876.dkr.ecr.us-east-1.amazonaws.com/nextgenz:latest
        name: nextgenz-app
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
