manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:215726090298:regional/webacl/next-gen-z-waf_web_acl-prod-webacl/4380be2c-cbc9-4037-b4e6-e8f21493bdf4
    alb.ingress.kubernetes.io/security-groups: sg-0f203d37bf7c449b7
spec:
  rules:
  - host: nginx.215726090298.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
